@@ -1,3 +1,6 @@
+2014-07-01 Tsi YANG <tsi.yang@plan-net.fr>
+	* Feature: Renders level of categories.
+
 2014-04-28 Tsi YANG <tsi.yang@plan-net.fr>
 	* Feature: Adds directory of categories.
 	* Feature: Connected to tca fe admin.
